<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="#11331f">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="serif-monospace"
        android:textSize="40sp"
        android:textColor="@color/yellow"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/rec_id_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec_id"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/act_2_rcv_txt"
        app:layout_constraintBottom_toTopOf="@id/act_2_rcv_txt"
        />

    <TextView
        android:id="@+id/send_id_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_id"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/act_2_prev_txt"
        app:layout_constraintBottom_toTopOf="@id/act_2_prev_txt"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/act_2_prev_txt"
        android:background="@drawable/my_text_bg"
        android:padding="8dp"
        android:textAlignment="textEnd"
        style="@style/GivenTxt"
        android:text="@string/default_give_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rec_id_2"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/act_2_rcv_txt"
        style="@style/ReceiveTxt"
        android:background="@drawable/rec_text_bg"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_txt"
        android:textAlignment="textStart"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/act_2_edit_txt"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/act_2_send_btn"
        style="@style/ActivityTwoSendButton"
        android:text="@string/send_btn_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/act_2_edit_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:hint="@string/edit_hint"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/act_2_send_btn"
        app:layout_constraintBottom_toTopOf="@id/act_2_send_btn"
        app:layout_constraintEnd_toEndOf="@id/act_2_send_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>